<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#eaebec"
    android:layout_height="wrap_content"
    tools:context="armored.g12matrickapp.Activities.subject_Choose"
    >

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="2dp"
        android:layout_margin="10dp"
        app:contentPadding="5dp"
        app:cardElevation="2dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/progresslayout"
            android:gravity="center"
            android:visibility="visible"
            android:background="@color/colorAll"
            android:layout_width="match_parent"
            android:layout_height="450dp">

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/indeterminate_progress_library"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                style="@style/Widget.MaterialProgressBar.ProgressBar" />

        </LinearLayout>

    <armored.g12matrickapp.Widgets.ExpandableGridView
        android:id="@+id/mainGrid"
        android:numColumns="2"
        android:layoutAnimation="@anim/list_animation"
        android:animateLayoutChanges="true"
        android:listSelector="#55d2d3d4"
        android:drawSelectorOnTop="true"
        android:scrollbars="none"
        android:choiceMode="none"
        android:background="#e5e5e5"
        android:horizontalSpacing="0.5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="0.5dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardQuizzo"
        android:layout_width="match_parent"
        app:cardCornerRadius="2dp"
        android:layout_margin="10dp"
        app:contentPadding="0dp"
        app:cardElevation="2dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:background="@color/quiz_pic_bg"
                android:layout_height="70dp"
                android:id="@+id/appCompatImageView" />

            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:text="Try Quizzi"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_gravity="bottom"
                    android:text="@string/quizzi_text"
                    android:textColor="#bb000000"
                    android:textStyle="normal"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="2dp"
            android:layout_margin="10dp"
            app:contentPadding="0dp"
            app:cardElevation="2dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/challengeImageView"
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:background="@color/colorOne"
                    android:layout_height="70dp" />


                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:text="Challenge To Learn"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:text="@string/challenge_text"
                        android:textColor="#bb000000"
                        android:textStyle="normal"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="2dp"
            android:layout_margin="10dp"
            app:contentPadding="0dp"
            app:cardElevation="2dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:paddingRight="12dp"
                    android:background="@color/fb_cover_bg"
                    android:layout_height="70dp"
                    android:id="@+id/appCompatImageView2" />

                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:text="@string/fb_header"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:text="@string/fb_text"
                        android:textColor="#bb000000"
                        android:textStyle="normal"
                        android:layout_height="wrap_content" />

                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:text="@string/connect"
                        android:layout_marginTop="10dp"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        app:backgroundTint="#3c5a99"
                        app:elevation="3dp"
                        android:textColor="#ffffff"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v7.widget.LinearLayoutCompat>
